# gold-strategy-playground

./: .gitignore  README.md  app.py  constraints.txt  pyproject.toml
src/gold_strategy/backtest/: engine.py  metrics.py  sweep.py  walk_forward.py
src/gold_strategy/data/: loaders.py
src/gold_strategy/indicators/: rsi.py  sma.py
src/gold_strategy/strategies/: rsi_mean_reversion.py  sma_crossover.py
src/gold_strategy_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backtest_engine.py  test_data.py  test_strategies.py  test_sweep.py  test_walk_forward.py
